[package]
name = "cw-gelotto-minter"
version = "0.0.1"
authors = []
edition = "2021"
description = "CW721 Minter Smart Contract"
license = "Apache-2.0"
repository = ""
homepage = ""
documentation = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[dependencies]
cw-utils = { version = "1.0.2" }
cw2 = { version = "1.1.1" }
cw20 = { version = "1.1.1" }
cw-storage-plus = { version = "1.1.0" }
cosmwasm-schema = { version = "1.4.1" }
cosmwasm-std = { version = "1.4.1" }
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.50" }
cw721 = "0.18.0"
cw721-base = "0.18.0"
svg = "0.14.0"

[dev-dependencies]
cw-multi-test = { version = "0.17.0" }
